# mediacms

./: Makefile  README.md  docker-compose.dev.yml  install.sh  pyproject.toml  requirements.txt  restart_script.sh  uwsgi.ini
actions/: models.py
actions/migrations/: 0001_initial.py  0002_initial.py  (+1 more)
cms/: celery.py  custom_pagination.py  dev_settings.py  local_settings_example.py  permissions.py  settings.py  urls.py
deploy/: README.md  celery_beat.service  celery_long.service  celery_short.service  celery_whisper.service  mediacms.io  mediacms.service  mediacms_logrorate  nginx.conf  uwsgi.ini
docs/: CONTRIBUTING.md  CinemataCMS-recommendations-algorithms.md  Customise-social-media-links.md  Rate-limiting-with-django-axes.md  cinematacms-roles-permission-matrix.md  creating_superuser.md  directory.md  frontend-development.md  hsts-security.md  index.md  mac-setup-docker.md  mac_setup.md  makefile-and-uv.md  permission_system.md  sidebar-content-guide.md  ubuntu-22.04-setup.md  user_management.md
files/: admin.py  backends.py  context_processors.py  feeds.py  forms.py  helpers.py  lists.py  management_views.py  methods.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
fixtures/: encoding_profiles.json
frontend/: .babelrc  .env  .env.example  .gitignore  LICENSE  README.md  cli.js  package-lock.json  package.json  pnpm-workspace.yaml
templates/: root.html
uploader/: fineuploader.py  views.py
users/: adapter.py  admin.py  forms.py  models.py  password_validators.py  serializers.py  tests.py  urls.py  views.py
utils/: security.py
(+508 files in other folders)
